internal/api: use the new DB.GetVersionsForPath method
Update the versions route to use the new DB method, which supports
paging and changes the sort order.

Add query parameters for token and limit.

Also add a query to request pseudo-versions, which are omitted
by default.

One problem: there is no cheap way to get the total number of versions
in general; we only know for sure when there's just one page.
We use -1 in the API and document that this means we don't know.

Reviewed-on: https://go-review.googlesource.com/c/pkgsite/+/786041
kokoro-CI: kokoro <noreply+kokoro@google.com>
LUCI-TryBot-Result: golang-scoped@luci-project-accounts.iam.gserviceaccount.com <golang-scoped@luci-project-accounts.iam.gserviceaccount.com>
